--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "fmt": "pnpm rome check . --apply-suggested && pnpm rome format . --write"
   },
   "dependencies": {
-    "@next/font": "^13.2.1",
-    "@next/mdx": "^13.2.1",
-    "@types/node": "18.15.10",
-    "@types/react": "18.0.29",
-    "@types/react-dom": "18.0.11",
-    "@upstash/redis": "^1.20.1",
-    "@vercel/analytics": "^0.1.11",
-    "contentlayer": "^0.3.0",
-    "framer-motion": "^10.9.1",
-    "lucide-react": "^0.127.0",
+    "@next/mdx": "^14.0.2",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@upstash/redis": "^1.25.1",
+    "@vercel/analytics": "^1.1.1",
+    "contentlayer": "^0.3.4",
+    "esbuild": "0.18.20",
+    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.292.0",
     "markdown-wasm": "^1.2.0",
-    "next": "13.2.4",
-    "next-contentlayer": "^0.3.0",
+    "next": "13.5.6",
+    "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wrap-balancer": "^0.4.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.9.4",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.3",
-    "typescript": "5.0.2"
+    "react-wrap-balancer": "^1.1.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.10.2",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "shiki": "^0.14.5",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@opentelemetry/api": "^1.4.1",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "postcss-nesting": "^11.2.2",
-    "rome": "^11.0.0",
-    "tailwindcss": "^3.2.7",
+    "@opentelemetry/api": "^1.7.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
+    "rome": "^12.1.3",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-debug-screens": "^2.2.1"
   }
 }
