--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.15",
     "@upstash/redis": "^1.25.1",
     "@vercel/analytics": "^1.1.1",
+    "clsx": "^2.1.0",
     "contentlayer": "^0.3.4",
     "esbuild": "0.18.20",
     "framer-motion": "^10.16.5",
@@ -30,6 +31,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "shiki": "^0.14.5",
+    "tailwind-merge": "^2.2.1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
