--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@next/mdx": "^14.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@upstash/redis": "^1.25.1",
     "@vercel/analytics": "^1.1.1",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "esbuild": "0.18.20",
     "framer-motion": "^10.16.5",
@@ -31,7 +33,8 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "shiki": "^0.14.5",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   },
   "devDependencies": {
