--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "plausible-tracker": "^0.3.9",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7"
