--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
+    "@astrojs/vercel": "^8.1.4",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.8.0",
     "class-variance-authority": "^0.7.1",
