--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/vercel": "^8.1.4",
     "@fontsource/roboto": "^5.2.6",
     "@resvg/resvg-js": "^2.6.2",
+    "@sentry/astro": "^9.28.1",
     "@tailwindcss/vite": "^4.0.14",
     "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.6",
