--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
     "@astrojs/vercel": "^8.1.4",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@fontsource/roboto": "^5.2.6",
     "@resvg/resvg-js": "^2.6.2",
     "@sentry/astro": "^9.28.1",
@@ -27,7 +32,9 @@
     "canvaskit-wasm": "^0.40.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.2",
     "plausible-tracker": "^0.3.9",
+    "pyodide": "^0.27.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
