--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     },
     "strictNullChecks": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "types": ["vitest/globals"]
   }
 }
