--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "tw-to-css": "^0.0.12"
+  },
+  "devDependencies": {
+    "@types/three": "^0.180.0"
   }
 }
