--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@fontsource/roboto": "^5.2.8",
     "@resvg/resvg-js": "^2.6.2",
+    "@rybbit/js": "^0.4.0",
     "@sentry/astro": "^10.19.0",
     "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.2",
@@ -33,10 +34,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
-    "plausible-tracker": "^0.3.9",
     "pyodide": "^0.28.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "rrweb": "2.0.0-alpha.4",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
